fix style on safari

--- a/clips_player/src/src/components/Footer/styles.scss
+++ b/clips_player/src/src/components/Footer/styles.scss
@@ -2,11 +2,12 @@
   padding: 16px;
   box-shadow: 0 0 5px #aaa;
   align-items: center;
-  display: flex;
+  // display: flex;
   color: #ffffff;
   background-color: rgb(19, 52, 65);
-  justify-content: flex-end;
+  // justify-content: flex-end;
   margin-top: 16px;
+  text-align: right;
 
   .email {
     color: #dddddd;
